[package]
name = "email-newsletter"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
[[bin]]
path = "src/main.rs"
name = "email-newsletter"


[dependencies]
actix-web = "4"
actix-http = "3.2.2"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
reqwest = "0.11"
